terraform/waf.tf
resource "aws_wafv2_web_acl" "cloudfront" {
  provider = aws.us_east_1
  count    = var.enable_cloudfront ? 1 : 0

  name  = "wanderlust-cloudfront-waf"
  scope = "CLOUDFRONT"

  default_action {
    allow {}
  }

  rule {
    name     = "AWSManagedRulesCommonRuleSet"
    priority = 10

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "wanderlust-common-rules"
      sampled_requests_enabled   = true
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "wanderlust-cloudfront-waf"
    sampled_requests_enabled   = true
  }
}
